@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        + login : TextField
        + viewPane : Pane
        - id : HashMap<String, Colleague>
        + initialize()
        + onStart()
        + setView()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Controller .up.|> model.Mediator
  sample.Controller o-- model.Question : baseTest
  sample.Controller o-- model.Colleague : currentColleague
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
